@@ -264,6 +264,8 @@
 
 									if (!Ext.isEmpty(records))
 										this.view.getStore().add(CMDBuild.core.Utils.objectArraySort(records, CMDBuild.core.constants.Proxy.DOMAIN_DESCRIPTION)); // Ascending items sort
+
+									this.cmfg('panelGridAndFormFilterAdvancedFilterEditorRelationsSelectionManage');
 								}
 							}
 						});
